modal sheet fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -4223,6 +4223,7 @@ a.ids-btn.sidebarBurger {
     bottom: 0;
     width: 100%;
     height: auto;
+    max-height: 100vh;
 }
 
 .modal-large .modal-content {
